[gd_scene load_steps=7 format=2]

[ext_resource path="res://player/Player.gd" type="Script" id=1]
[ext_resource path="res://player/Player.png" type="Texture" id=2]
[ext_resource path="res://player/Jump.wav" type="AudioStream" id=3]
[ext_resource path="res://player/Whoosh.wav" type="AudioStream" id=4]

[sub_resource type="CapsuleShape2D" id=1]

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.0

[node name="Player" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 20, 40 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="WhooshSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="DetectArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
shape = SubResource( 2 )

[connection signal="body_entered" from="DetectArea" to="." method="_on_Area2D_body_entered"]
